# rayleighbernart

./: .gitignore  CMakeLists.txt  DNS.cpp  DynamicalModel.cpp  ObservationModel.cpp  PffuncsRayleigh.cpp  README.md  ReducedOrderModel.cpp  main.cpp  tmp.cc
cmake/find/: FindCImg.cmake  Findsmctc.cmake
include/: ._DynamicalModel.h  ._ObservationModel.h  ._PffuncsRayleigh.h  ._ReducedOrderModel.h  DynamicalModel.h  ObservationModel.h  PffuncsRayleigh.h  ReducedOrderModel.h
